<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin_start"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/website_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/website_text" />

    <EditText
        android:id="@+id/website_text"
        android:layout_width="@dimen/text_width"
        android:layout_height="@dimen/text_height"
        android:layout_marginStart="@dimen/text_margin_start"
        android:layout_marginTop="@dimen/text_margin_top"
        android:ems="10"
        android:hint="@string/website_hint"
        android:inputType="textLongMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin_start"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/map_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_text" />

    <EditText
        android:id="@+id/map_text"
        android:layout_width="@dimen/text_width"
        android:layout_height="@dimen/text_height"
        android:layout_marginStart="@dimen/text_margin_start"
        android:layout_marginTop="@dimen/text_margin_top"
        android:ems="10"
        android:hint="@string/map_hint"
        android:inputType="textLongMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/website_text" />

    <Button
        android:id="@+id/snippet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin_start"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/snippet_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/snippet_text" />

    <EditText
        android:id="@+id/snippet_text"
        android:layout_width="@dimen/text_width"
        android:layout_height="@dimen/text_height"
        android:layout_marginStart="@dimen/text_margin_start"
        android:layout_marginTop="@dimen/text_margin_top"
        android:ems="10"
        android:hint="@string/snippet_hint"
        android:inputType="textLongMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_text" />


</androidx.constraintlayout.widget.ConstraintLayout>



